# 2025_group_8

./: .gitignore  CMakeLists.txt  Doxyfile  ModelPart.cpp  ModelPart.h  ModelPartList.cpp  ModelPartList.h  README.md  VRRenderThread.cpp  VRRenderThread.h  git-cheat-sheet.txt  icons.qrc  main.cpp  mainpage.md  mainwindow.cpp  mainwindow.h  mainwindow.ui  partpropertiesdialog.cpp  partpropertiesdialog.h  partpropertiesdialog.ui
.github/workflows/: docs.yml
